2008-12-21  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 564102 – _wrap_g_output_stream_write_async not adding a
	reference to the buffer passed

	* gio/gio.override (pygio_notify_copy_buffer): New function.
	(pygio_free_notify): Free new `buffer' field if it is set.

	* gio/goutputstream.override (_wrap_g_output_stream_write_async):
	Copy the buffer with new pygio_notify_copy_buffer() and use the
	copy for g_output_stream_write_async() call.

	* gio/gfile.override (_wrap_g_file_replace_contents_async): Same
	as for _wrap_g_output_stream_write_async().

2008-12-03  Paul Pogonyshev  <pogonyshev@gmx.net>

	* glib/pyglib.c (pyglib_error_check): Test if `domain' is not-null
	before using it (avoids segfaults, see bug #561826).

2008-10-31  John Finlay  <finlay@moeraki.com>

	* codegen/__init__.py (__all__): Add defsgen to __all__ list.

	* codegen/h2def.py (find_enum_defs): Strip out # directives from
	enum defintions.
	(clean_func): Change ' * G_CONST_RETURN * ' to '** '

	* codegen/Makefile.am (codegen_PYTHON): Add defsgen.py

	* codegen/defsgen.py (typecode): Use the passed in prefix as a
	hint when creating a typecode.
	(split_prefix,write_enum_defs,_write_obj_helper): Add function to
	use passed in prefix as a hint when splitting an object name into
	module and name.

	* codegen/h2def.py (DefsWriter.write_enum_defs): Make sure the
	prefix ends with a _ i.e. really handle the GDK_FONT_FONT,
	GDK_FONT_FONTSET case.

2008-09-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/goutputstream.override
	(g_output_stream_write_all): use gsize instead of gssize.

2008-09-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 530935 – pygobject_set_properties doesnt release the GIL

	* gobject/pygobject.c (pygobject_set_properties): Reuse
	set_property_from_pspec() which release GIL for us.  Also make
	sure that g_object_thaw_notify() is called even after error.

2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 549517 – add __repr__ to gio.Drive, gio.Mount and gio.Volume
